test/nexj/invalidbase/messages/CircularInheritance_D.message
<Message base="CircularInheritance_B">
   <Parts>
      <Value name="d" type="string"/>
   </Parts>
</Message>
